@@ -1,3 +1,7 @@
+Thu Jan 19 13:31:27 CET 2012
+	Fixing digest authentication for GET requests with URI arguments
+	(#2059). -CG
+
 Sat Jan  7 17:30:48 CET 2012
 	Digest authentication expects nonce count in base 16, not base 10
 	(#2061). -tclaveirole
